helm/postgress-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: db
spec:
  selector:
    matchLabels:
      app: postgres
  serviceName: "postgres"
  replicas: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: postgres
        image: yogender027/postgrestemdb-image:1.0.0
        args: ["-c", "config_file=/config/postgresql.conf"]
        ports:
        - containerPort: 5432
          name: database
        volumeMounts:
        - name: config
          mountPath: /config
          readOnly: false
        - name: data
          mountPath: /data
          readOnly: false
        resources:
          requests:
            memory: "512Mi"  # Request 512 MiB of memory
            cpu: "500m"      # Request 500 milliCPU (0.5 CPU cores)
          limits:
            memory: "1Gi"    # Limit to 1 GiB of memory
            cpu: "1"         # Limit to 1 CPU core
      volumes:
      - name: config
        configMap:
          name: postgres
          defaultMode: 0755
      - name: data
        emptyDir: {}
