helm/postgres-flask.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: db
  labels:
    app: flask-app
spec:
  replicas: 3  # Adjust the number of replicas as needed
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: yogender027/flask-app:0.1.3 # Replace with your image name
        ports:
        - containerPort: 5000
        imagePullPolicy: Always
        volumeMounts:
        - name: tmp-volume
          mountPath: /tmp  # Mounting the /tmp directory to avoid permission issues
        # Resource requests and limits
        resources:
          requests:  # Minimum resources the container needs
            memory: "256Mi"  # Request 256 MiB of memory
            cpu: "250m"      # Request 250 milliCPU (0.25 CPU cores)
          limits:    # Maximum resources the container can use
            memory: "512Mi"  # Limit to 512 MiB of memory
            cpu: "500m"      # Limit to 500 milliCPU (0.5 CPU cores)
      volumes:
      - name: tmp-volume
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
  namespace: db
  labels:
    app: flask-app
    job: flask-app-metrics  
spec:
  selector:
    app: flask-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
