helm/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mydb-service
  namespace: db
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    targetPort: 5432
    name: postgres
  type: ClusterIP
  selector:
    app: postgres
